--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,17 +15,10 @@
 
 
         <!-- 현재 시간, 기온, 날짜 -->
-        <TextView
-            android:id="@+id/currentInfoText"
-            android:layout_width="256dp"
-            android:layout_height="78dp"
-            android:text="@string/hello_blank_fragment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="78dp" />
 
         <!-- 현재 시간대의 펭귄 코디 (디폴트 + 투표 반영) -->
+
+        <!-- 다음 시간대의 정보와 디폴트 코디 -->
         <ImageView
             android:id="@+id/currentPenguin"
             android:layout_width="match_parent"
@@ -36,7 +29,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- 다음 시간대의 정보와 디폴트 코디 -->
+        <TextView
+            android:id="@+id/currentInfoText"
+            android:layout_width="256dp"
+            android:layout_height="78dp"
+            android:layout_marginTop="78dp"
+            android:text="@string/hello_blank_fragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/nextPenguins"
             android:layout_width="match_parent"
@@ -50,57 +53,91 @@
                 android:id="@+id/nextInfoText1"
                 android:layout_width="79dp"
                 android:layout_height="35dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
                 android:text="TextView"
-                tools:layout_editor_absoluteX="38dp"
-                tools:layout_editor_absoluteY="20dp" />
+                app:layout_constraintBottom_toTopOf="@+id/nextPenguin1"
+                app:layout_constraintEnd_toStartOf="@+id/nextInfoText2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 현재 이후 첫번째 시간대의 펭귄 코디 (디폴트 값) -->
             <ImageView
                 android:id="@+id/nextPenguin1"
                 android:layout_width="117dp"
                 android:layout_height="170dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="14dp"
+                android:layout_marginBottom="15dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_base"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="55dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/nextPenguin2"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nextInfoText1" />
 
             <!-- 현재 이후 두번째 시간대의 정보 텍스트 (날짜, 시간대, 최저/최대 기온) -->
             <TextView
                 android:id="@+id/nextInfoText2"
                 android:layout_width="79dp"
                 android:layout_height="35dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
                 android:text="TextView"
-                tools:layout_editor_absoluteX="166dp"
-                tools:layout_editor_absoluteY="20dp" />
+                app:layout_constraintBottom_toTopOf="@+id/nextPenguin2"
+                app:layout_constraintEnd_toStartOf="@+id/nextInfoText3"
+                app:layout_constraintStart_toEndOf="@+id/nextInfoText1"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 현재 이후 두번째 시간대의 펭귄 코디 (디폴트 값) -->
             <ImageView
                 android:id="@+id/nextPenguin2"
                 android:layout_width="117dp"
                 android:layout_height="170dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="14dp"
+                android:layout_marginBottom="15dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_base"
-                tools:layout_editor_absoluteX="147dp"
-                tools:layout_editor_absoluteY="55dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/nextPenguin3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/nextPenguin1"
+                app:layout_constraintTop_toBottomOf="@+id/nextInfoText2" />
+
+            <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
 
             <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
             <TextView
                 android:id="@+id/nextInfoText3"
                 android:layout_width="79dp"
                 android:layout_height="35dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="35dp"
                 android:text="TextView"
-                tools:layout_editor_absoluteX="297dp"
-                tools:layout_editor_absoluteY="20dp" />
+                app:layout_constraintBottom_toTopOf="@+id/nextPenguin3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/nextInfoText2"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
             <ImageView
                 android:id="@+id/nextPenguin3"
                 android:layout_width="117dp"
                 android:layout_height="170dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="15dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_base"
-                tools:layout_editor_absoluteX="278dp"
-                tools:layout_editor_absoluteY="55dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/nextPenguin2"
+                app:layout_constraintTop_toBottomOf="@+id/nextInfoText3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
