--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,20 +16,45 @@
         android:id="@+id/iv_currentPenguin"
         android:layout_width="241dp"
         android:layout_height="427dp"
-        android:layout_marginTop="112dp"
         android:src="@drawable/img_base"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+    <ImageView
+        android:id="@+id/iv_weather"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_margin="50dp"
+        android:src="@drawable/img_sunny"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="78dp"
+        android:text="동작구"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_currentInfo"
-        android:layout_width="256dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="78dp"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        android:id="@+id/tv_current_temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10도"
+        app:layout_constraintEnd_toEndOf="@+id/iv_weather"
+        app:layout_constraintStart_toStartOf="@+id/iv_weather"
+        app:layout_constraintTop_toBottomOf="@+id/iv_weather" />
+
+    <TextView
+        android:id="@+id/tv_currentTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:text="2023.01.18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,6 +76,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             android:text="TextView"
+            android:gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin1"
             app:layout_constraintEnd_toStartOf="@+id/tv_nextInfoText2"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +91,8 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
             android:src="@drawable/img_base"
+            android:gravity="center"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -78,6 +106,8 @@
             android:layout_height="35dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
+            android:gravity="center"
+
             android:layout_marginEnd="30dp"
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin2"
@@ -92,6 +122,8 @@
             android:layout_height="170dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+
+            android:gravity="center"
             android:layout_marginBottom="15dp"
             android:src="@drawable/img_base"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +140,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="35dp"
+            android:gravity="center"
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin3"
             app:layout_constraintEnd_toEndOf="parent"
