--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Snowman" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Snowman" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/BlueLight30</item>
         <item name="colorPrimaryVariant">@color/BlueDark30</item>
