--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,15 +20,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_location" />
-    <ImageView
-        android:id="@+id/iv_weather"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:layout_margin="50dp"
-        android:src="@drawable/img_sunny"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_location"
@@ -36,27 +27,40 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="78dp"
         android:text="동작구"
+        android:textColor="@color/BlueDark40"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/H2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/iv_currentPenguin">
 
-    <TextView
-        android:id="@+id/tv_current_temperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10도"
-        app:layout_constraintEnd_toEndOf="@+id/iv_weather"
-        app:layout_constraintStart_toStartOf="@+id/iv_weather"
-        app:layout_constraintTop_toBottomOf="@+id/iv_weather" />
 
-    <TextView
-        android:id="@+id/tv_currentTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        android:text="2023.01.18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/iv_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/img_sunny"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_current_temperature"
+            style="@style/H3"
+            android:text="10"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/BlueDark40"
+            app:layout_constraintTop_toTopOf="@+id/iv_currentPenguin" />
+
+    </LinearLayout>
 
     <!-- 다음 시간대의 정보와 디폴트 코디 -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,102 +69,135 @@
         android:layout_height="240dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="-27dp">
 
-        <!-- 현재 이후 첫번째 시간대의 정보 텍스트 (날짜, 시간대, 최저/최대 기온) -->
-        <TextView
-            android:id="@+id/tv_nextInfoText1"
-            android:layout_width="79dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="30dp"
-            android:text="TextView"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin1"
-            app:layout_constraintEnd_toStartOf="@+id/tv_nextInfoText2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- 현재 이후 첫번째 시간대의 펭귄 코디 (디폴트 값) -->
-        <ImageView
-            android:id="@+id/iv_nextPenguin1"
-            android:layout_width="117dp"
-            android:layout_height="170dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/img_base"
-            android:gravity="center"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText1" />
-
-        <!-- 현재 이후 두번째 시간대의 정보 텍스트 (날짜, 시간대, 최저/최대 기온) -->
-        <TextView
-            android:id="@+id/tv_nextInfoText2"
-            android:layout_width="79dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-
-            android:layout_marginEnd="30dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin2"
-            app:layout_constraintEnd_toStartOf="@+id/tv_nextInfoText3"
-            app:layout_constraintStart_toEndOf="@+id/tv_nextInfoText1"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- 현재 이후 두번째 시간대의 펭귄 코디 (디폴트 값) -->
-        <ImageView
-            android:id="@+id/iv_nextPenguin2"
-            android:layout_width="117dp"
-            android:layout_height="170dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-
-            android:gravity="center"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/img_base"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/iv_nextPenguin1"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText2" />
-
-        <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
-        <TextView
-            android:id="@+id/tv_nextInfoText3"
-            android:layout_width="79dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="35dp"
-            android:gravity="center"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_nextInfoText2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
-        <ImageView
-            android:id="@+id/iv_nextPenguin3"
-            android:layout_width="117dp"
-            android:layout_height="170dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/img_base"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/iv_nextPenguin2"
-            app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText3" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <!-- 현재 이후 첫번째 시간대의 정보 텍스트 (날짜, 시간대, 최저/최대 기온) -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/Caption1"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_nextInfoText1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+                <!-- 현재 이후 첫번째 시간대의 펭귄 코디 (디폴트 값) -->
+
+                <TextView
+                    style="@style/H4"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_temperature1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+                <ImageView
+                    android:id="@+id/iv_nextPenguin1"
+                    android:layout_width="117dp"
+                    android:layout_height="170dp"
+                    android:gravity="center"
+                    android:src="@drawable/img_base"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin2"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText1" />
+
+            </LinearLayout>
+
+            <!-- 현재 이후 두번째 시간대의 정보 텍스트 (날짜, 시간대, 최저/최대 기온) -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <TextView
+                    style="@style/Caption1"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_nextInfoText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin2"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_nextInfoText3"
+                    app:layout_constraintStart_toEndOf="@+id/tv_nextInfoText1"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    style="@style/H4"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_temperature2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+                <!-- 현재 이후 두번째 시간대의 펭귄 코디 (디폴트 값) -->
+                <ImageView
+                    android:id="@+id/iv_nextPenguin2"
+                    android:layout_width="117dp"
+                    android:layout_height="170dp"
+                    android:gravity="center"
+                    android:src="@drawable/img_base"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_nextPenguin3"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/iv_nextPenguin1"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText2" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
+                <TextView
+                    style="@style/Caption1"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_nextInfoText3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:layout_constraintBottom_toTopOf="@+id/iv_nextPenguin3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tv_nextInfoText2"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    style="@style/H4"
+                    android:textColor="@color/BlueDark40"
+                    android:id="@+id/tv_temperature3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+                <!-- 현재 이후 세번째 시간대의 펭귄 코디 (디폴트 값) -->
+                <ImageView
+                    android:id="@+id/iv_nextPenguin3"
+                    android:layout_width="117dp"
+                    android:layout_height="170dp"
+                    android:src="@drawable/img_base"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/iv_nextPenguin2"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_nextInfoText3" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
