--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,47 +16,47 @@
 
 
     <style name="H1">
-        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">36sp</item>
     </style>
 
     <style name="H2">
-        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">24sp</item>
     </style>
 
     <style name="H3">
-        <item name="android:fontFamily">@font/noto_bold</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textSize">18sp</item>
     </style>
 
 
     <style name="H4">
-        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">16sp</item>
     </style>
 
 
     <style name="Body">
-        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">14sp</item>
     </style>
 
 
     <style name="Button">
-        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">12sp</item>
     </style>
 
 
     <style name="Caption1">
-        <item name="android:fontFamily">@font/noto_medium</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
         <item name="android:textSize">12sp</item>
     </style>
 
 
     <style name="Caption2">
-        <item name="android:fontFamily">@font/noto_regular</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
         <item name="android:textSize">12sp</item>
     </style>
 </resources>
